// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful behavior Should merge skipped fields with previous values 1`] = `
Object {
  "done": [Function],
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 1,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_5": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 2`] = `
Object {
  "done": [Function],
  "errorCount": 3,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_5": Object {
      "errorCount": 2,
      "errors": Array [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 3`] = `
Object {
  "done": [Function],
  "errorCount": 4,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "field_statement_2",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 2,
      "valid": true,
      "warnCount": 1,
      "warnings": Array [
        "field_statement_4",
      ],
    },
    "field_5": Object {
      "errorCount": 2,
      "errors": Array [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 1,
}
`;

exports[`more complex Should run correctly 1`] = `
Object {
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 0,
  "tests": Object {},
  "valid": false,
  "warnCount": 0,
}
`;

exports[`more complex Should run correctly 2`] = `
Object {
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 2,
  "tests": Object {
    "confirm": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "password": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "username": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`more complex Should run correctly 4`] = `
Object {
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "confirm": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "password": Object {
      "errorCount": 1,
      "errors": Array [
        "password is required",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "username": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`more complex Should run correctly 6`] = `
Object {
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "confirm": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "password": Object {
      "errorCount": 1,
      "errors": Array [
        "password is required",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "username": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;
